# imdb-rocket

./: Cargo.toml  README.md
migrations/20170720022008_create_movies/: up.sql
src/: lib.rs  main.rs  models.rs  movie.rs
