[package]
name = "imdb-rocket"
version = "0.1.0"
authors = ["JD Gonzales <jd_gonzales@icloud.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0.10"
diesel = { version = "0.14.0", features = ["postgres"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
dotenv = "0.9.0"